@@ -1,43 +1,35 @@
-package com.bookstore.userservice;
+package com.bookstore.userservice.model;
 
 import jakarta.persistence.*;
-import lombok.*;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
 
 @Entity
 @Table(name = "users")
-@Data
+@Getter
+@Setter
 @NoArgsConstructor
-@AllArgsConstructor
-@Builder
 public class User implements UserDetails {
-
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Id @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
-    @Column(unique = true)
+    @Column(unique = true, nullable = false)
     private String username;
-
     private String password;
-
-    private String role;
+    private String role = "USER";
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // Optional: implement roles/authorities
+        return List.of(() -> role);
     }
 
     @Override public boolean isAccountNonExpired() { return true; }
-
     @Override public boolean isAccountNonLocked() { return true; }
-
     @Override public boolean isCredentialsNonExpired() { return true; }
-
     @Override public boolean isEnabled() { return true; }
 }
-
